Watch together frontend interactions (#14)
* watch together area and map update

* fix lint and base page

* fix minor

* separate watchtogether video classes

* create watch together area with backend

* eslint check pass

* Create Test for watch together area controller in frontend

* name changing

* add test for watch together area in Town Controller Frontend

* Model update

* API for insert video into playlist

* update

* 1

* synced upon opening the modal

* Update WatchTogetherModal.tsx

* emit interactble update when added to playlist

* previous error fix

* adding playnext routes and get host routes

* video playlist update

* still opens two arae

* Add tests for Watch Together Area Model in backend

* Test for Town in back end

* Add parts of the Towns controller test

* double modal bug fix

* control sync and refactor

* Add API for video update

* video sync

* onend next video

* eslint fix

* fix CICD

* Back end test finished

* Fix bug

* Mock Youtube API attempt

* Real mock update

* Unused import fix

* Update main.yml

* remove mock, change to secrete key in CICD

* Comments and API test in backend

* lint fix

* a functioning login page

pair programmed with Weixin

* update package-lock

* check the process env

* env variable and code refactor

---------
